--- a/.installed.cfg
+++ b/.installed.cfg
@@ -42,3 +42,39 @@ parts = wsgi main
 
 [buildout]
 parts = main wsgi
+
+[buildout]
+installed_develop_eggs = 
+
+[buildout]
+parts = wsgi main
+
+[buildout]
+parts = main wsgi
+
+[buildout]
+installed_develop_eggs = 
+
+[buildout]
+parts = wsgi main
+
+[buildout]
+parts = main wsgi
+
+[buildout]
+installed_develop_eggs = 
+
+[buildout]
+parts = wsgi main
+
+[buildout]
+parts = main wsgi
+
+[buildout]
+installed_develop_eggs = 
+
+[buildout]
+parts = wsgi main
+
+[buildout]
+parts = main wsgi
