--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,8 +1,8 @@
 [buildout]
 newest = false
-#index = http://e.pypi.python.org/simple
+index = http://e.pypi.python.org/simple
 #develop = ../zcms
-find-links = /home/panjy/git/zcms/dist
+#find-links = /home/panjy/git/zcms/dist
 parts = main
         wsgi
 
