--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,7 +2,7 @@
 newest = false
 index = http://e.pypi.python.org/simple
 #develop = ../zcms
-#find-links = /home/panjy/git/zcms/dist
+find-links = /home/panjy/git/zcms/dist
 parts = main
         wsgi
 
