--- a/.installed.cfg
+++ b/.installed.cfg
@@ -25,6 +25,7 @@ eggs = %(__buildout_space_n__)szcms
 eggs-directory = /home/panjy/git/site-paas/eggs
 executable = /usr/bin/python
 find-links = /home/panjy/git/zcms/dist
+index = http://e.pypi.python.org/simple
 interpreter = python
 recipe = zc.recipe.egg
 scripts = pserve
