--- a/buildout.cfg
+++ b/buildout.cfg
@@ -11,7 +11,7 @@ recipe = zc.recipe.egg
 interpreter = python
 dependent-scripts = true
 eggs =
-       zcms
+       zcms >= 0.5.6
 scripts = pserve
           pshell
 
