--- a/.installed.cfg
+++ b/.installed.cfg
@@ -1,6 +1,14 @@
 [buildout]
-installed_develop_eggs = 
-parts = main wsgi
+installed_develop_eggs = /home/panjy/git/site-developer/develop-eggs/zcms.egg-link
+parts = wsgi main
+
+[wsgi]
+__buildout_installed__ = /home/panjy/git/site-developer/parts/wsgi
+	/home/panjy/git/site-developer/parts/wsgi/wsgi
+__buildout_signature__ = collective.recipe.modwsgi-2.0-py2.7.egg zc.recipe.egg-2.0.0-py2.7.egg setuptools-0.7.2-py2.7.egg zc.buildout-2.2.0-py2.7.egg
+config-file = /home/panjy/git/site-developer/production.ini
+eggs = zcms >= 0.5.6
+recipe = collective.recipe.modwsgi
 
 [main]
 __buildout_installed__ = /home/panjy/git/site-developer/bin/pshell
@@ -15,15 +23,11 @@ dependent-scripts = true
 develop-eggs-directory = /home/panjy/git/site-developer/develop-eggs
 eggs = zcms >= 0.5.6
 eggs-directory = /home/panjy/git/site-developer/eggs
+index = http://e.pypi.python.org/simple
 interpreter = python
 recipe = zc.recipe.egg
 scripts = pserve
 	pshell
 
-[wsgi]
-__buildout_installed__ = /home/panjy/git/site-developer/parts/wsgi
-	/home/panjy/git/site-developer/parts/wsgi/wsgi
-__buildout_signature__ = collective.recipe.modwsgi-2.0-py2.7.egg zc.recipe.egg-2.0.0-py2.7.egg setuptools-0.7.2-py2.7.egg zc.buildout-2.2.0-py2.7.egg
-config-file = /home/panjy/git/site-developer/production.ini
-eggs = zcms >= 0.5.6
-recipe = collective.recipe.modwsgi
+[buildout]
+parts = main wsgi
