--- a/contents/developer/tour/_config.yaml
+++ b/contents/developer/tour/_config.yaml
@@ -1,4 +1,4 @@
 title: 开发教程
 description: 一组快速入门的开发教程
-order: [index.rst, pkg.rst, deploy.rst, hello.rst, lightweight.rst, dingcan, faq.rst, python.rst, zpt.rst]
+order: [custom.rst, pkg.rst, hello.rst, lightweight.rst, dingcan, faq.rst, python.rst, zpt.rst]
 exclude: [img, pic]
