使用 lesscss.org 的 bootstrap 主题

--- a/.installed.cfg
+++ b/.installed.cfg
@@ -1,33 +1,30 @@
 [buildout]
-installed_develop_eggs = /home/panjy/git/site-developer/develop-eggs/zcms.egg-link
-parts = wsgi main
-
-[wsgi]
-__buildout_installed__ = /home/panjy/git/site-developer/parts/wsgi
-	/home/panjy/git/site-developer/parts/wsgi/wsgi
-__buildout_signature__ = collective.recipe.modwsgi-2.0-py2.7.egg zc.recipe.egg-2.0.0-py2.7.egg setuptools-0.7.2-py2.7.egg zc.buildout-2.2.0-py2.7.egg
-config-file = /home/panjy/git/site-developer/production.ini
-eggs = zcms >= 0.5.6
-recipe = collective.recipe.modwsgi
+installed_develop_eggs = /home/paicha/site-developer/develop-eggs/zcms.egg-link
+parts = main wsgi
 
 [main]
-__buildout_installed__ = /home/panjy/git/site-developer/bin/pshell
-	/home/panjy/git/site-developer/bin/pserve
-	/home/panjy/git/site-developer/bin/python
-__buildout_signature__ = zc.recipe.egg-2.0.0-py2.7.egg setuptools-0.7.2-py2.7.egg zc.buildout-2.2.0-py2.7.egg
-_b = /home/panjy/git/site-developer/bin
-_d = /home/panjy/git/site-developer/develop-eggs
-_e = /home/panjy/git/site-developer/eggs
-bin-directory = /home/panjy/git/site-developer/bin
+__buildout_installed__ = /home/paicha/site-developer/bin/pshell
+	/home/paicha/site-developer/bin/pserve
+	/home/paicha/site-developer/bin/python
+__buildout_signature__ = zc.recipe.egg-2.0.1-py2.7.egg setuptools-1.0-py2.7.egg zc.buildout-2.2.1-py2.7.egg
+_b = /home/paicha/site-developer/bin
+_d = /home/paicha/site-developer/develop-eggs
+_e = /home/paicha/site-developer/eggs
+bin-directory = /home/paicha/site-developer/bin
 dependent-scripts = true
-develop-eggs-directory = /home/panjy/git/site-developer/develop-eggs
+develop-eggs-directory = /home/paicha/site-developer/develop-eggs
 eggs = zcms >= 0.5.6
-eggs-directory = /home/panjy/git/site-developer/eggs
-index = http://e.pypi.python.org/simple
+eggs-directory = /home/paicha/site-developer/eggs
+index = http://pypi.douban.com/simple/
 interpreter = python
 recipe = zc.recipe.egg
 scripts = pserve
 	pshell
 
-[buildout]
-parts = main wsgi
+[wsgi]
+__buildout_installed__ = /home/paicha/site-developer/parts/wsgi
+	/home/paicha/site-developer/parts/wsgi/wsgi
+__buildout_signature__ = collective.recipe.modwsgi-2.0-py2.7.egg zc.recipe.egg-2.0.1-py2.7.egg setuptools-1.0-py2.7.egg zc.buildout-2.2.1-py2.7.egg
+config-file = /home/paicha/site-developer/production.ini
+eggs = zcms >= 0.5.6
+recipe = collective.recipe.modwsgi
