--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,6 @@
 [buildout]
 newest = false
-index = http://e.pypi.python.org/simple
+index = http://pypi.douban.com/simple/
 develop = ../zcms
 #find-links = /home/panjy/git/zcms/dist
 parts = main
