--- a/contents/developer/_config.yaml
+++ b/contents/developer/_config.yaml
@@ -1,5 +1,5 @@
 title: 易度开发者中心
 order: [index.rst, tour, tut, api, open, blog]
 exclude: [img, cert]
-theme_base: http://download.zopen.cn/themes/developer
-theme: index.html
+theme_base: /themes/bootstrap
+theme: default.html
