fix form format

--- a/contents/developer/api/_config.yaml
+++ b/contents/developer/api/_config.yaml
@@ -11,7 +11,9 @@ order: [repository.rst,
         social.rst, 
         notification.rst, 
         log.rst, 
+        team.rst,
         orginfo.rst, 
+        rules.rst,
         scripting.rst, 
         package.rst,
         workflow.rst
