改变标签组的位置

--- a/contents/developer/api/_config.yaml
+++ b/contents/developer/api/_config.yaml
@@ -9,6 +9,7 @@ order: [repository.rst,
         workflow.rst,
         package.rst,
 
+        tags.rst,
         social.rst, 
         notification.rst, 
         log.rst, 
