--- a/contents/developer/api/_config.yaml
+++ b/contents/developer/api/_config.yaml
@@ -1,27 +1,5 @@
-title: 应用开发
-description: 系统的介绍平台提供的开发接口
-order: [overview.rst,
-        permission.rst, 
-        repository.rst, 
-        tags.rst,
-        search.rst, 
+title: 开放接口
+exclude: [img, java]
+order: [oauth.rst, webdav.rst]
+description: 易度是一个开放的平台，对外部系统提供全套的操作API，方便其他系统和易度进行集成。
 
-        social.rst, 
-        notification.rst, 
-        log.rst, 
-        team.rst,
-
-        root.rst,
-        stage.rst, 
-        skin.rst,
-        rules.rst,
-        form.rst, 
-        workflow.rst,
-        package.rst,
-
-        orginfo.rst, 
-        anyflow.rst,
-        rdb.rst, 
-        scripting.rst, 
-        kss.rst, 
-        others.rst]
