--- a/contents/developer/_config.yaml
+++ b/contents/developer/_config.yaml
@@ -1,4 +1,4 @@
-title: 易度开发者中心
+title: 易办公 - 企业应用快速开发平台
 order: [index.rst, tour, api, app, blog]
 exclude: [img, cert]
 theme_base: /themes/developer-bootstrap
