--- a/contents/developer/backend/_config.yaml
+++ b/contents/developer/backend/_config.yaml
@@ -1,5 +1,5 @@
-title: 应用开发
-description: 系统的介绍平台提供的开发接口
+title: 后端开发
+description: 系统的介绍平台后端开发接口
 order: [overview.rst,
         storage.rst, 
         search.rst, 
