--- a/contents/developer/api/_config.yaml
+++ b/contents/developer/api/_config.yaml
@@ -1,5 +1,10 @@
 title: 开放接口
 exclude: [img, java]
-order: [oauth.rst, webdav.rst]
+order: [overview.rst, 
+        oauth.rst, 
+        auth.rst, 
+        instance.rst,
+        viewer.rst,
+        webdav.rst]
 description: 易度是一个开放的平台，对外部系统提供全套的操作API，方便其他系统和易度进行集成。
 
