--- a/contents/developer/_config.yaml
+++ b/contents/developer/_config.yaml
@@ -1,5 +1,5 @@
 title: Easydo - 企业应用快速开发平台
-order: [index.rst, tour, frontend, api, backend, blog]
+order: [index.rst, tour, sdk, api, package, blog]
 exclude: [img, cert]
 theme_base: /themes/developer-bootstrap
 theme: default.html
