--- a/contents/developer/api/_config.yaml
+++ b/contents/developer/api/_config.yaml
@@ -4,7 +4,7 @@ order: [overview.rst,
         oauth.rst, 
         auth.rst, 
         account.rst,
-        instance.rst,
+        content.rst,
         viewer.rst,
         webdav.rst]
 description: 易度是一个开放的平台，对外部系统提供全套的操作API，方便其他系统和易度进行集成。
