--- a/contents/developer/tour/_config.yaml
+++ b/contents/developer/tour/_config.yaml
@@ -1,4 +1,11 @@
 title: 平台介绍 
 description: 总体介绍平台，了解功能、开发方式
-order: [custom.rst, pkg.rst, hello.rst, lightweight.rst, dingcan, faq.rst, python.rst, zpt.rst]
+order: [custom.rst, 
+        pkg.rst, 
+        hello.rst, 
+        lightweight.rst, 
+        dingcan, 
+        faq.rst, 
+        python.rst, 
+       ]
 exclude: [img, pic]
