--- a/contents/developer/api/_config.yaml
+++ b/contents/developer/api/_config.yaml
@@ -1,11 +1,11 @@
 title: REST API
+description: 易度是一个开放的平台，对外部系统提供全套的操作API，方便其他系统和易度进行集成。
 exclude: [img, java]
 order: [overview.rst, 
         oauth.rst, 
         auth.rst, 
         account.rst,
         content.rst,
-        viewer.rst,
+        file.rst,
         webdav.rst]
-description: 易度是一个开放的平台，对外部系统提供全套的操作API，方便其他系统和易度进行集成。
 
