--- a/contents/developer/package/_config.yaml
+++ b/contents/developer/package/_config.yaml
@@ -4,6 +4,7 @@ order: [overview.rst,
         storage.rst, 
         search.rst, 
 
+        code.rst,
         pt.rst,
         form.rst, 
         workflow.rst,
