改进流程和扩展属性

--- a/contents/developer/package/_config.yaml
+++ b/contents/developer/package/_config.yaml
@@ -9,6 +9,7 @@ order: [overview.rst,
 
         form.rst, 
         workflow.rst,
+        mdsets.rst, 
         stage.rst, 
         skin.rst,
         rules.rst,
