--- a/contents/developer/api/_config.yaml
+++ b/contents/developer/api/_config.yaml
@@ -5,6 +5,7 @@ order: [overview.rst,
         auth.rst, 
         account.rst,
         content.rst,
+        viewer.rst,
         file.rst,
         webdav.rst]
 
