--- a/contents/developer/package/_config.yaml
+++ b/contents/developer/package/_config.yaml
@@ -21,6 +21,8 @@ order: [overview.rst,
 
         rdb.rst, 
         orginfo.rst, 
-        anyflow.rst,
+        front.rst,
         kss.rst, 
-        others.rst]
+        others.rst,
+        anyflow.rst
+        ]
