--- a/contents/developer/package/_config.yaml
+++ b/contents/developer/package/_config.yaml
@@ -21,7 +21,7 @@ order: [overview.rst,
 
         rdb.rst, 
         orginfo.rst, 
-        kss.rst, 
+        ui.rst, 
         others.rst,
         anyflow.rst
         ]
