--- a/contents/developer/api/_config.yaml
+++ b/contents/developer/api/_config.yaml
@@ -1,6 +1,6 @@
 title: REST API
 description: 易度是一个开放的平台，对外部系统提供全套的操作API，方便其他系统和易度进行集成。
-exclude: [img, java]
+exclude: [img, java, swfx.rst]
 order: [overview.rst, 
         auth.rst, 
         account.rst,
@@ -8,4 +8,3 @@ order: [overview.rst,
         viewer.rst,
         file.rst,
         webdav.rst]
-
