--- a/contents/developer/api/_config.yaml
+++ b/contents/developer/api/_config.yaml
@@ -1,10 +1,9 @@
 title: REST API
 description: 易度是一个开放的平台，对外部系统提供全套的操作API，方便其他系统和易度进行集成。
-exclude: [img, java, swfx.rst]
+exclude: [img, java, swfx.rst, file.rst]
 order: [overview.rst, 
         auth.rst, 
         account.rst,
         content.rst,
         viewer.rst,
-        file.rst,
         webdav.rst]
